style.css
h1 {
  text-align: center;
}
body {
  background-image: url("images/background.jpeg");
  width: auto;
}
#game {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#cardPic {
  border: 2px solid black;
}
.mainCard {
  max-height: 300px;
  max-width: 180px;
  margin: 2%;
}
.card {
  max-height: 200px;
  max-width: 120px;
  border: 2px solid black;
  margin: 10px;
}
#mainBox {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap-reverse;
}
#leftBox {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
#rightBox {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 5%;
}
#topBox {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#centerBox {
  display: flex;
  flex-direction: row;
}
#bottomBox {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#box {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#card2 {
  transform: rotate(150deg);
}

